<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/create_group_title"
            android:layout_marginTop="@dimen/navigate_title_margin"
            android:layout_marginLeft="@dimen/page_padding"
            android:layout_marginRight="@dimen/page_padding"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/navigate_title_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/subtitleTextView"
            android:layout_marginTop="@dimen/navigate_subtitle_margin"
            android:layout_marginLeft="@dimen/page_padding"
            android:layout_marginRight="@dimen/page_padding"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/navigate_subtitle_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="@dimen/navigate_content_margin"
            android:layout_marginLeft="@dimen/page_padding"
            android:layout_marginRight="@dimen/page_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="* "
                android:textColor="@color/critical"
                android:textSize="@dimen/navigate_reminder_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/create_group_available"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/navigate_reminder_text_size"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/groupEdit"
            android:hint="@string/create_group_hint"
            android:textColorHint="@color/split_bar"
            android:padding="@dimen/input_padding_outer"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/text_secondary"
            android:background="@drawable/ripple"
            android:layout_marginTop="@dimen/navigate_content_elem_margin"
            android:layout_marginLeft="@dimen/page_padding"
            android:layout_marginRight="@dimen/page_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableEndCompat="@drawable/ic_choose" />

        <TextView
            android:id="@+id/nextButton"
            android:enabled="false"
            android:layout_marginTop="@dimen/navigate_content_margin"
            android:layout_marginBottom="@dimen/navigate_content_margin"
            android:layout_marginLeft="@dimen/page_padding"
            android:layout_marginRight="@dimen/page_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/button_padding_horizontal"
            android:paddingRight="@dimen/button_padding_horizontal"
            android:paddingTop="@dimen/button_padding_vertical"
            android:paddingBottom="@dimen/button_padding_vertical"
            android:background="@drawable/button_primary"
            android:text="@string/create_group_ok"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/text_button_primary"
            android:gravity="center" />

    </LinearLayout>

</ScrollView>